crates/ruff_python_parser/tests/snapshots/invalid_syntax@single_star_for.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/err/single_star_for.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..35,
        body: Suite {
            range: 0..35,
            node_index: NodeIndex(None),
            statements: [
                For(
                    StmtFor {
                        node_index: NodeIndex(None),
                        range: 0..16,
                        is_async: false,
                        target: Name(
                            ExprName {
                                node_index: NodeIndex(None),
                                range: 4..5,
                                id: Name("_"),
                                ctx: Store,
                            },
                        ),
                        iter: Starred(
                            ExprStarred {
                                node_index: NodeIndex(None),
                                range: 9..11,
                                value: Name(
                                    ExprName {
                                        node_index: NodeIndex(None),
                                        range: 10..11,
                                        id: Name("x"),
                                        ctx: Load,
                                    },
                                ),
                                ctx: Load,
                            },
                        ),
                        body: Suite {
                            range: 13..16,
                            node_index: NodeIndex(None),
                            statements: [
                                Expr(
                                    StmtExpr {
                                        node_index: NodeIndex(None),
                                        range: 13..16,
                                        value: EllipsisLiteral(
                                            ExprEllipsisLiteral {
                                                node_index: NodeIndex(None),
                                                range: 13..16,
                                            },
                                        ),
                                    },
                                ),
                            ],
                        },
                        orelse: Suite {
                            range: 16..16,
                            node_index: NodeIndex(None),
                            statements: [],
                        },
                    },
                ),
                For(
                    StmtFor {
                        node_index: NodeIndex(None),
                        range: 17..34,
                        is_async: false,
                        target: Starred(
                            ExprStarred {
                                node_index: NodeIndex(None),
                                range: 21..23,
                                value: Name(
                                    ExprName {
                                        node_index: NodeIndex(None),
                                        range: 22..23,
                                        id: Name("x"),
                                        ctx: Store,
                                    },
                                ),
                                ctx: Store,
                            },
                        ),
                        iter: Name(
                            ExprName {
                                node_index: NodeIndex(None),
                                range: 27..29,
                                id: Name("xs"),
                                ctx: Load,
                            },
                        ),
                        body: Suite {
                            range: 31..34,
                            node_index: NodeIndex(None),
                            statements: [
                                Expr(
                                    StmtExpr {
                                        node_index: NodeIndex(None),
                                        range: 31..34,
                                        value: EllipsisLiteral(
                                            ExprEllipsisLiteral {
                                                node_index: NodeIndex(None),
                                                range: 31..34,
                                            },
                                        ),
                                    },
                                ),
                            ],
                        },
                        orelse: Suite {
                            range: 34..34,
                            node_index: NodeIndex(None),
                            statements: [],
                        },
                    },
                ),
            ],
        },
    },
)
```
## Semantic Syntax Errors

  |
1 | for _ in *x: ...
  |          ^^ Syntax Error: Starred expression cannot be used here
2 | for *x in xs: ...
  |


  |
1 | for _ in *x: ...
2 | for *x in xs: ...
  |     ^^ Syntax Error: Starred expression cannot be used here
  |
